Renamed terminology related to "including" resources to use "require" instead. This should make it clearer that you are really just declaring a dependency rather than actually including the script/stylesheet.  The actual "inclusion" of the resource happens elsewhere.

--- a/src/PackageSpecs/Assman.Spark/Content/Views/bindings.xml
+++ b/src/PackageSpecs/Assman.Spark/Content/Views/bindings.xml
@@ -16,8 +16,8 @@
     <start>#using(new InlineBlockOutputScope(this, Html.StyleRegistry())) {</start>
     <end>#}</end>
   </element>
-  <element name="ScriptInclude">#Html.IncludeScript('@src', '@target');</element>
-  <element name="ScriptInclude">#Html.IncludeScript('@src');</element>
-  <element name="StyleInclude">#Html.IncludeStylesheet('@src', '@target');</element>
-  <element name="StyleInclude">#Html.IncludeStylesheet('@src');</element>
+  <element name="RequireScript">#Html.RequireScript('@src', '@target');</element>
+  <element name="RequireScript">#Html.RequireScript('@src');</element>
+  <element name="RequireStylesheet">#Html.RequireStylesheet('@src', '@target');</element>
+  <element name="RequireStylesheet">#Html.RequireStylesheet('@src');</element>
 </bindings>
